<resources>
    <string name="app_name">Marvel Characters</string>
    <string name="characters">Characters</string>
    <string name="google_map">Google Map</string>
    <string name="marvel_logo">Marvel logo</string>
    <string name="photo_character">Photo character</string>
    <string name="click_to_details">Click to details</string>
    <string name="series">Series</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="from_details">From_details</string>
    <string name="photo_series">Photo_series</string>
    <string name="photo_series_details">Photo_series_details</string>
    <string name="character_id">Character_id</string>
    <string name="character_name">Character_name</string>
    <string name="background_ic_from_details">background_ic_from_details</string>
    <string name="background_ic_to_details_character">background_ic_to_details_character</string>
    <string name="photo_comics">Photo_comics</string>
    <string name="failure">Failure</string>
    <string name="ok">OK</string>
    <string name="photo_flag">Photo_flag</string>
    <string name="from_map">From_map</string>
    <string name="region">Region:</string>
    <string name="capital">Capital:</string>
    <string name="timezones">Timezones:</string>
    <string name="character_photo">Character_photo</string>
    <string name="ic_to_details_character">ic_to_details_character</string>
    <string name="photo_events">Photo_events</string>
    <string name="name_details">Name_details</string>
    <string name="description">Description</string>

</resources>